--- a/web/output.css
+++ b/web/output.css
@@ -558,18 +558,6 @@ video {
   width: 100%;
 }
 
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
-}
-
 .fixed {
   position: fixed;
 }
@@ -2111,6 +2099,10 @@ video {
   width: 1px;
 }
 
+.w-\[140px\] {
+  width: 140px;
+}
+
 .min-w-\[100\%\] {
   min-width: 100%;
 }
@@ -3497,10 +3489,6 @@ video {
   --tw-bg-opacity: 0.75;
 }
 
-.bg-opacity-25 {
-  --tw-bg-opacity: 0.25;
-}
-
 .bg-\[url\(\'\.\/public\/avatar1\@3x\.png\'\)\] {
   background-image: url('./public/avatar1@3x.png');
 }
@@ -4203,6 +4191,11 @@ video {
   padding-bottom: 60px;
 }
 
+.py-\[80px\] {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
 .py-measurements-gap-80 {
   padding-top: 80px;
   padding-bottom: 80px;
@@ -4256,11 +4249,6 @@ video {
 .py-px {
   padding-top: 1px;
   padding-bottom: 1px;
-}
-
-.py-\[80px\] {
-  padding-top: 80px;
-  padding-bottom: 80px;
 }
 
 .pb-0 {
@@ -4673,14 +4661,6 @@ video {
 
 .pt-px {
   padding-top: 1px;
-}
-
-.pt-\[80px\] {
-  padding-top: 80px;
-}
-
-.pb-\[80px\] {
-  padding-bottom: 80px;
 }
 
 .text-left {
@@ -6868,14 +6848,18 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
   background-color: rgb(242 247 249 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-general-1-primary:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(146 79 232 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-general-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-general-1-primary:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(146 79 232 / var(--tw-bg-opacity));
+.hover\:bg-opacity-50:hover {
+  --tw-bg-opacity: 0.5;
 }
 
 .hover\:bg-opacity-75:hover {
@@ -6886,12 +6870,13 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
   --tw-bg-opacity: 0.9;
 }
 
-.hover\:bg-opacity-25:hover {
-  --tw-bg-opacity: 0.25;
+.hover\:font-bold:hover {
+  font-weight: 700;
 }
 
-.hover\:bg-opacity-50:hover {
-  --tw-bg-opacity: 0.5;
+.hover\:\!text-general-white:hover {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
 }
 
 .hover\:text-custom-gold:hover {
@@ -6920,11 +6905,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
 .hover\:text-yellow-600:hover {
   --tw-text-opacity: 1;
   color: rgb(202 138 4 / var(--tw-text-opacity));
-}
-
-.hover\:\!text-general-white:hover {
-  --tw-text-opacity: 1 !important;
-  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
 }
 
 .hover\:\[box-shadow\:inset_0_0_0_2px\]:hover {
@@ -7515,6 +7495,10 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
 }
 
 @media screen and (max-width: 950px) {
+  .mq950\:fixed {
+    position: fixed;
+  }
+
   .mq950\:mx-\[0px\] {
     margin-left: 0px;
     margin-right: 0px;
@@ -8485,6 +8469,11 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     padding-right: 0px;
   }
 
+  .mq450\:px-\[15px\] {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
   .mq450\:px-\[20px\] {
     padding-left: 20px;
     padding-right: 20px;
@@ -8500,6 +8489,11 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     padding-right: 120px;
   }
 
+  .mq450\:py-\[15px\] {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
   .mq450\:py-\[5px\] {
     padding-top: 5px;
     padding-bottom: 5px;
@@ -8508,36 +8502,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
   .mq450\:py-measurements-gap-80-48 {
     padding-top: 80px;
     padding-bottom: 80px;
-  }
-
-  .mq450\:px-\[15px\] {
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-
-  .mq450\:py-\[15px\] {
-    padding-top: 15px;
-    padding-bottom: 15px;
-  }
-
-  .mq450\:px-\[10px\] {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .mq450\:px-\[7px\] {
-    padding-left: 7px;
-    padding-right: 7px;
-  }
-
-  .mq450\:px-\[6px\] {
-    padding-left: 6px;
-    padding-right: 6px;
-  }
-
-  .mq450\:py-\[10px\] {
-    padding-top: 10px;
-    padding-bottom: 10px;
   }
 
   .mq450\:pb-5 {
