--- a/web/output.css
+++ b/web/output.css
@@ -1239,6 +1239,10 @@ video {
   margin-top: 60px;
 }
 
+.mt-\[-100px\] {
+  margin-top: -100px;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -2101,6 +2105,10 @@ video {
 
 .w-\[140px\] {
   width: 140px;
+}
+
+.w-\[54px\] {
+  width: 54px;
 }
 
 .min-w-\[100\%\] {
@@ -4661,6 +4669,10 @@ video {
 
 .pt-px {
   padding-top: 1px;
+}
+
+.pl-\[481px\] {
+  padding-left: 481px;
 }
 
 .text-left {
@@ -7445,6 +7457,10 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     padding-top: 80px;
   }
 
+  .mq1050\:pl-60 {
+    padding-left: 15rem;
+  }
+
   .mq1050\:text-10xl {
     font-size: 29px;
   }
@@ -8223,6 +8239,10 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
 
   .mq750\:pt-measurements-gap-80-48 {
     padding-top: 80px;
+  }
+
+  .mq750\:pl-\[120px\] {
+    padding-left: 120px;
   }
 
   .mq750\:text-10xl {
