--- a/web/output.css
+++ b/web/output.css
@@ -6870,6 +6870,11 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-text-accent-purple-accent:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(146 79 232 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-opacity-50:hover {
   --tw-bg-opacity: 0.5;
 }
