--- a/web/output.css
+++ b/web/output.css
@@ -1195,6 +1195,10 @@ video {
   margin-top: 1rem;
 }
 
+.mt-\[-100px\] {
+  margin-top: -100px;
+}
+
 .mt-\[-10px\] {
   margin-top: -10px;
 }
@@ -1237,10 +1241,6 @@ video {
 
 .mt-\[60px\] {
   margin-top: 60px;
-}
-
-.mt-\[-100px\] {
-  margin-top: -100px;
 }
 
 .box-border {
@@ -1827,6 +1827,10 @@ video {
   width: 14.4px;
 }
 
+.w-\[140px\] {
+  width: 140px;
+}
+
 .w-\[1440px\] {
   width: 1440px;
 }
@@ -2101,14 +2105,6 @@ video {
 
 .w-px {
   width: 1px;
-}
-
-.w-\[140px\] {
-  width: 140px;
-}
-
-.w-\[54px\] {
-  width: 54px;
 }
 
 .min-w-\[100\%\] {
@@ -3327,10 +3323,6 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-custom-gold {
-  border-color: rgba(162, 144, 97, var(--tw-text-opacity));
 }
 
 .border-opacity-50 {
@@ -4675,10 +4667,6 @@ video {
   padding-top: 1px;
 }
 
-.pl-\[481px\] {
-  padding-left: 481px;
-}
-
 .text-left {
   text-align: left;
 }
@@ -5952,6 +5940,10 @@ nav .parent > ul.sub-menu:before {
   display: none;
 }
 
+.stm-hover:hover .stm-white {
+  color: white;
+}
+
 /* Container that holds the slider */
 
 .slider-wrapper {
@@ -6832,10 +6824,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
   border-width: 1px;
 }
 
-.hover\:border-\[2px\]:hover {
-  border-width: 2px;
-}
-
 .hover\:border-solid:hover {
   border-style: solid;
 }
@@ -6880,11 +6868,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
 .hover\:bg-general-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-text-accent-purple-accent:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(146 79 232 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-opacity-50:hover {
@@ -7472,10 +7455,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
 
   .mq1050\:pt-measurements-gap-80-48 {
     padding-top: 80px;
-  }
-
-  .mq1050\:pl-60 {
-    padding-left: 15rem;
   }
 
   .mq1050\:text-10xl {
@@ -8256,10 +8235,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
 
   .mq750\:pt-measurements-gap-80-48 {
     padding-top: 80px;
-  }
-
-  .mq750\:pl-\[120px\] {
-    padding-left: 120px;
   }
 
   .mq750\:text-10xl {
