--- a/web/global.css
+++ b/web/global.css
@@ -594,6 +594,10 @@ nav .parent > ul.sub-menu:before {
 .stm-hover:hover .stm-white {
 	color: white;
 }
+
+.stm-bg-hover:hover .stm-bg {
+	background-color: #924FE8;
+}
 /* Container that holds the slider */
 .slider-wrapper {
     overflow: hidden;
