--- a/web/global.css
+++ b/web/global.css
@@ -144,7 +144,10 @@ body {
 .cf7-min-w-115px {
 	min-width: 115px;
 }
-
+.stm_menu-sticky{
+    position: sticky;
+    background-color: rgba(146, 79, 232, 0.3);
+}
 .cf7-custom-button {
 	--tw-text-opacity: 1;
 	color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -153,7 +156,7 @@ body {
 	text-transform: uppercase;
 	font-weight: 500;
 	font-size: 16px;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Inter';
 	text-align: center;
 	min-width: 91px;
 	display: inline-block;
@@ -171,6 +174,7 @@ body {
 .cf7-custom-input {
 	background-color: #ffffff; /* White background */
 	color: #000000; /* Black text color */
+	border-radius: 10px;
 }
 
 .cf7-custom-input::placeholder {
@@ -193,6 +197,7 @@ input.wpcf7-form-control.wpcf7-phonetext.wpcf7-text.wpcf7-validates-as-phonetext
 body .intl-tel-input.separate-dial-code .selected-flag {
 	background-color: #fff;
 	display: table;
+
 }
 
 body .elementor-element:where(.e-con-full,.elementor-widget) {
@@ -212,8 +217,7 @@ body .elementor-element {
 
 body .wpcf7
 form.wpcf7-form {
-	--tw-bg-opacity: 1;
-	background-color: rgb(162 144 97 / var(--tw-bg-opacity));
+
 	margin-bottom: 0px;
 }
 
@@ -229,8 +233,20 @@ body .stm-f {
 body .stm-f
 select.wpcf7-form-control.wpcf7-select {
 	color: #999999;
+	border-radius: 10px;
 }
-
+body .cf7-custom-button {
+    border-radius: 10px;
+    background-color: transparent;
+    border: 1px solid;
+    width: 100%;
+	line-height: 10px;
+}
+body .cf7-custom-button:hover {
+    background-color: #fff;
+    border-color: #924FE8;
+    color: #924FE8;
+}
 body .wpcf7 form .wpcf7-response-output {
 	color: #dc3232 !important;
 	border: unset;
@@ -587,7 +603,32 @@ nav .parent > ul.sub-menu:before {
 .stm-open .stm-minus {
 	display: block;
 }
+.cf7-no-focus-border:focus {
+  outline: none;
+  border: none;
+}
+.stm-p-no{
+	width: 100%;
+}
 
+.stm-p-no br{
+	display: none;
+}
+.stm-p-no input{
+	width: 100%;
+}
+.stm-p-no p {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+}
+
+.stm-p-no p textarea {
+    height: 100%;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+}
 .stm-open .stm-plus {
 	display: none;
 }
