--- a/web/global.css
+++ b/web/global.css
@@ -145,8 +145,10 @@ body {
 	min-width: 115px;
 }
 .stm_menu-sticky{
-    position: sticky;
+   /* position: sticky;
     background-color: rgba(146, 79, 232, 0.3);
+
+    */
 }
 .cf7-custom-button {
 	--tw-text-opacity: 1;
@@ -259,16 +261,41 @@ body .wpcf7 form .wpcf7-response-output {
 	padding-left: 50px;
 }
 
+body .wpcf7 form .stm-c-form
+.wpcf7-not-valid-tip {
+	color: #dc3232;
+    display: block;
+    position: absolute;
+    bottom: -27px;
+    font-size: 11px;
+    padding-left: -10px;
+    margin-left: -11px;
+    font-weight: 500;
+
+}
 body .wpcf7 form
 .wpcf7-not-valid-tip {
 	color: #dc3232;
-	font-size: 1em;
-	font-weight: normal;
-	display: block;
-	position: absolute;
+    display: block;
+    position: absolute;
+    bottom: -27px;
+    font-size: 11px;
+    padding-left: -10px;
+    margin-left: -11px;
+    font-weight: 500;
 
 }
 
+body .wpcf7 form .wpcf7-response-output {
+    position: absolute;
+    text-align: left;
+    padding-left: 50px;
+    font-size: 12px;
+    font-weight: 600;
+}
+.wpcf7.js {
+    position: relative;
+}
 .cursor-pointer.hover:scale-110 {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 	transition-duration: 300ms;
@@ -349,6 +376,10 @@ nav .parent > ul.sub-menu:before {
 	nav.hfe-nav-menu__layout-horizontal.hfe-nav-menu__submenu-arrow.menu-is-active.hfe-dropdown {
 		margin-top: 10px
 	}
+
+	body .wpcf7 form .wpcf7-response-output {
+bottom: 30px;
+}
 }
 
 @media (min-width: 1025px) {
