--- a/web/global.css
+++ b/web/global.css
@@ -155,7 +155,6 @@ body {
 	color: rgb(255 255 255 / var(--tw-text-opacity));
 	letter-spacing: 0.4em;
 	line-height: 18px;
-	text-transform: uppercase;
 	font-weight: 500;
 	font-size: 16px;
 	font-family: 'Inter';
@@ -225,13 +224,18 @@ form.wpcf7-form {
 
 body .stm-f .wpcf7 form .wpcf7-response-output {
 	bottom: 20px;
-
+  color: #fff !important;
 }
 
 body .stm-f {
 	z-index: 10000000000000;
 }
-
+body .stm-f .wpcf7 form .wpcf7-not-valid-tip {
+    bottom: -15px;
+    padding: 0px;
+    margin: 0px;
+    color: #fff;
+}
 body .stm-f
 select.wpcf7-form-control.wpcf7-select {
 	color: #999999;
@@ -268,7 +272,6 @@ body .wpcf7 form .stm-c-form
     position: absolute;
     bottom: -27px;
     font-size: 11px;
-    padding-left: -10px;
     margin-left: -11px;
     font-weight: 500;
 
