--- a/web/global.css
+++ b/web/global.css
@@ -149,6 +149,7 @@ body {
     background-color: rgba(146, 79, 232, 0.3);
 
     */
+
 }
 .cf7-custom-button {
 	--tw-text-opacity: 1;
@@ -383,6 +384,10 @@ nav .parent > ul.sub-menu:before {
 	body .wpcf7 form .wpcf7-response-output {
 bottom: 30px;
 }
+
+	.stm_menu-sticky {
+		background: #3b1967d4;
+	}
 }
 
 @media (min-width: 1025px) {
@@ -711,7 +716,7 @@ bottom: 30px;
 	display: block;
 	width: 28px;
 	height: 4px;
-	background-color: #000;
+	background-color: #fff;
 	margin-bottom: 5px;
 	border-radius: 2px
 }
@@ -1015,7 +1020,7 @@ bottom: 30px;
 		padding-left: 20px;
 		padding-right: 20px;
 		transition: all .15s;
-		background-color: #fff;
+		background-color: #3b1967d4;
 		visibility: visible;
 		opacity: 1
 	}
