--- a/web/output.css
+++ b/web/output.css
@@ -5590,6 +5590,21 @@ body .stm-f
   font-size: 16px;
 }
 
+body .stm-f
+input.wpcf7-form-control.wpcf7-phonetext.wpcf7-text {
+  border-radius: 10px;
+}
+
+body .stm-f
+.selected-flag {
+  border-radius: 10px;
+}
+
+body .stm-f
+.cs-tel.w-full {
+  border-radius: 10px;
+}
+
 body .cf7-custom-button {
   border-radius: 10px;
   background-color: transparent;
