--- a/web/global.css
+++ b/web/global.css
@@ -15,6 +15,17 @@ body {
   width: 100%;
 }
 
+.stm-logo-white, .stm-logo-black {
+  display: none;
+}
+
+.home .stm-logo-white {
+  display: block;
+}
+.home .stm-logo-black {
+  display: none;
+}
+
 .error404 .navigation .navigation-menu.active .menu {
   background-color: transparent;
 }
