--- a/web/global.scss
+++ b/web/global.scss
@@ -21,6 +21,11 @@ body {
     color: rgba(15, 19, 36, 0.6);
   }
 
+  .stm-dropdown {
+    color: rgba(15, 19, 36, 0.6);
+    background: #fff !important;
+    border: 1px solid  rgba(15, 19, 36, 0.6);
+  }
   .stm-logo-white {
     display: none;
   }
@@ -28,6 +33,11 @@ body {
   .stm-logo-black {
     display: block;
   }
+  .stm-dropdown li a:hover {
+     background-color: #924FE8 !important;
+    color: #fff;
+   }
+
 }
 
 
@@ -41,6 +51,22 @@ body.home {
   .stm-logo-black {
 	display: none;
   }
+ .stm-dropdown {
+    color:  #fff;
+    --tw-bg-opacity: 1;
+    background-color: rgb(146 79 232 / var(--tw-bg-opacity)) !important;
+    border: unset;
+       --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+
+  }
+
+    .stm-dropdown li a:hover {
+     color: rgba(15, 19, 36, 0.6) !important;
+    background-color: #fff !important;
+   }
+
 }
 
 .error404
