--- a/web/output.css
+++ b/web/output.css
@@ -3634,12 +3634,23 @@ body .stm-menu-colors, body .stm-dropdown {
   color: rgba(15, 19, 36, 0.6);
 }
 
+body .stm-dropdown {
+  color: rgba(15, 19, 36, 0.6);
+  background: #fff !important;
+  border: 1px solid rgba(15, 19, 36, 0.6);
+}
+
 body .stm-logo-white {
   display: none;
 }
 
 body .stm-logo-black {
   display: block;
+}
+
+body .stm-dropdown li a:hover {
+  background-color: #924FE8 !important;
+  color: #fff;
 }
 
 body.home .stm-logo-white {
@@ -3652,6 +3663,21 @@ body.home .stm-menu-colors {
 
 body.home .stm-logo-black {
   display: none;
+}
+
+body.home .stm-dropdown {
+  color: #fff;
+  --tw-bg-opacity: 1;
+  background-color: rgb(146 79 232/var(--tw-bg-opacity)) !important;
+  border: unset;
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-ring-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-shadow);
+}
+
+body.home .stm-dropdown li a:hover {
+  color: rgba(15, 19, 36, 0.6) !important;
+  background-color: #fff !important;
 }
 
 .error404 .navigation .navigation-menu.active .menu {
