--- a/web/global.css
+++ b/web/global.css
@@ -34,6 +34,15 @@ body .stm-dropdown li a:hover {
   color: #fff;
 }
 
+.navigation .navigation-menu .mobile-switcher span {
+  display: block;
+  width: 28px;
+  height: 4px;
+  background-color: rgba(15, 19, 36, 0.6);
+  margin-bottom: 5px;
+  border-radius: 2px;
+}
+
 body.home .stm-logo-white {
   display: block;
 }
@@ -52,9 +61,20 @@ body.home .stm-dropdown {
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-ring-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-shadow);
 }
+body.home .navigation .navigation-menu .mobile-switcher span {
+  background-color: #fff;
+}
+body.home .navigation .navigation-menu.active .menu {
+  background-color: rgba(59, 25, 103, 0.831372549);
+}
 body.home .stm-dropdown li a:hover {
   color: rgba(15, 19, 36, 0.6) !important;
   background-color: #fff !important;
+}
+@media (max-width: 1025px) {
+  body.home .stm_menu-sticky {
+    background: rgba(59, 25, 103, 0.831372549);
+  }
 }
 
 .error404 .navigation .navigation-menu.active .menu {
@@ -447,7 +467,7 @@ nav .parent > ul.sub-menu:before {
   }
 
   .stm_menu-sticky {
-    background: rgba(59, 25, 103, 0.831372549);
+    background: #ffffff;
   }
 }
 @media (min-width: 1025px) {
@@ -773,15 +793,6 @@ nav .parent > ul.sub-menu:before {
   z-index: 101;
 }
 
-.navigation .navigation-menu .mobile-switcher span {
-  display: block;
-  width: 28px;
-  height: 4px;
-  background-color: #fff;
-  margin-bottom: 5px;
-  border-radius: 2px;
-}
-
 .navigation .navigation-menu .mobile-switcher span:first-child {
   position: relative;
   top: 0;
@@ -1074,7 +1085,7 @@ nav .parent > ul.sub-menu:before {
     padding-left: 20px;
     padding-right: 20px;
     transition: all 0.15s;
-    background-color: rgba(59, 25, 103, 0.831372549);
+    background-color: #ffffff;
     visibility: visible;
     opacity: 1;
   }
