--- a/web/output.css
+++ b/web/output.css
@@ -3653,6 +3653,15 @@ body .stm-dropdown li a:hover {
   color: #fff;
 }
 
+.navigation .navigation-menu .mobile-switcher span {
+  display: block;
+  width: 28px;
+  height: 4px;
+  background-color: #fff;
+  margin-bottom: 5px;
+  border-radius: 2px;
+}
+
 body.home .stm-logo-white {
   display: block;
 }
@@ -3675,9 +3684,23 @@ body.home .stm-dropdown {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-ring-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-shadow);
 }
 
+body.home .navigation .navigation-menu .mobile-switcher span {
+  background-color: rgba(15, 19, 36, 0.6);
+}
+
+body.home .navigation .navigation-menu.active .menu {
+  background-color: rgba(59, 25, 103, 0.831372549);
+}
+
 body.home .stm-dropdown li a:hover {
   color: rgba(15, 19, 36, 0.6) !important;
   background-color: #fff !important;
+}
+
+@media (max-width: 1025px) {
+  body.home .stm_menu-sticky {
+    background: rgba(59, 25, 103, 0.831372549);
+  }
 }
 
 .error404 .navigation .navigation-menu.active .menu {
@@ -4094,7 +4117,7 @@ nav .parent > ul.sub-menu:before {
   }
 
   .stm_menu-sticky {
-    background: rgba(59, 25, 103, 0.831372549);
+    background: #ffffff;
   }
 }
 
@@ -4428,15 +4451,6 @@ nav .parent > ul.sub-menu:before {
   z-index: 101;
 }
 
-.navigation .navigation-menu .mobile-switcher span {
-  display: block;
-  width: 28px;
-  height: 4px;
-  background-color: #fff;
-  margin-bottom: 5px;
-  border-radius: 2px;
-}
-
 .navigation .navigation-menu .mobile-switcher span:first-child {
   position: relative;
   top: 0;
@@ -4734,7 +4748,7 @@ nav .parent > ul.sub-menu:before {
     padding-left: 20px;
     padding-right: 20px;
     transition: all 0.15s;
-    background-color: rgba(59, 25, 103, 0.831372549);
+    background-color: #ffffff;
     visibility: visible;
     opacity: 1;
   }
