--- a/web/global.css
+++ b/web/global.css
@@ -33,14 +33,17 @@ body .stm-dropdown li a:hover {
   background-color: #924FE8 !important;
   color: #fff;
 }
-
-.navigation .navigation-menu .mobile-switcher span {
+body .navigation .navigation-menu .mobile-switcher span {
   display: block;
   width: 28px;
   height: 4px;
   background-color: rgba(15, 19, 36, 0.6);
   margin-bottom: 5px;
   border-radius: 2px;
+}
+body .navigation .navigation-menu.active .menu li:hover {
+  color: #fff;
+  background-color: rgba(15, 19, 36, 0.6);
 }
 
 body.home .stm-logo-white {
@@ -66,6 +69,10 @@ body.home .navigation .navigation-menu .mobile-switcher span {
 }
 body.home .navigation .navigation-menu.active .menu {
   background-color: rgba(59, 25, 103, 0.831372549);
+}
+body.home .navigation .navigation-menu.active .menu li:hover {
+  color: rgba(15, 19, 36, 0.6);
+  background-color: #fff;
 }
 body.home .stm-dropdown li a:hover {
   color: rgba(15, 19, 36, 0.6) !important;
