--- a/web/global.scss
+++ b/web/global.scss
@@ -32,7 +32,7 @@ body {
   }
 
   .stm-logo-black {
-	display: block;
+	display: inline-block;
   }
 
   .stm-dropdown li a:hover {
@@ -51,8 +51,14 @@ body {
 
   .navigation .navigation-menu.active .menu li:hover {
 	color:  #fff;
-	background-color: rgba(15, 19, 36, 0.6);
+	background-color:  #3b1967d4;
   }
+
+  .navigation .navigation-menu .starter-menu > li > .sub-menu {
+
+    background-color:rgba(15, 19, 36, 0.6);
+
+}
 
 }
 
@@ -60,7 +66,7 @@ body {
 
 body.home {
   .stm-logo-white {
-	display: block;
+	display: inline-block;
   }
 
   .stm-menu-colors {
