--- a/web/global.scss
+++ b/web/global.scss
@@ -25,7 +25,7 @@ body {
 
   .stm-dropdown {
 	color: rgba(15, 19, 36, 0.6);
-	background: #fff !important;
+	background:   rgb(247 247 248 / var(--tw-bg-opacity)) !important;
 	border: 1px solid rgba(15, 19, 36, 0.6);
   }
 
