--- a/web/output.css
+++ b/web/output.css
@@ -798,6 +798,10 @@ video {
   margin-top: 30px;
 }
 
+.mt-\[-30px\] {
+  margin-top: -30px;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -5465,6 +5469,14 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
 }
 
 @media screen and (max-width: 650px) {
+  .mq650\:mt-\[-5px\] {
+    margin-top: -5px;
+  }
+
+  .mq650\:mt-\[-60px\] {
+    margin-top: -60px;
+  }
+
   .mq650\:min-w-\[166px\] {
     min-width: 166px;
   }
