--- a/web/output.css
+++ b/web/output.css
@@ -1214,6 +1214,10 @@ video {
   width: 1px;
 }
 
+.w-auto {
+  width: auto;
+}
+
 .min-w-\[101px\] {
   min-width: 101px;
 }
@@ -1428,6 +1432,10 @@ video {
 
 .max-w-full {
   max-width: 100%;
+}
+
+.max-w-\[300px\] {
+  max-width: 300px;
 }
 
 .flex-1 {
