--- a/web/output.css
+++ b/web/output.css
@@ -2891,6 +2891,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-general-9-secondary-variant {
+  --tw-text-opacity: 1;
+  color: rgb(104 104 104 / var(--tw-text-opacity));
+}
+
 .mix-blend-darken {
   mix-blend-mode: darken;
 }
@@ -5521,6 +5526,10 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
 
   .mq450\:min-w-full {
     min-width: 100%;
+  }
+
+  .mq450\:min-w-\[100px\] {
+    min-width: 100px;
   }
 
   .mq450\:max-w-full {
