--- a/web/output.css
+++ b/web/output.css
@@ -582,10 +582,6 @@ video {
   bottom: -110px;
 }
 
-.bottom-\[-3\.12\%\] {
-  bottom: -3.12%;
-}
-
 .bottom-\[-8\.85\%\] {
   bottom: -8.85%;
 }
@@ -594,20 +590,12 @@ video {
   bottom: 0%;
 }
 
-.bottom-\[71\.88\%\] {
-  bottom: 71.88%;
-}
-
 .left-\[-110px\] {
   left: -110px;
 }
 
 .left-\[0\%\] {
   left: 0%;
-}
-
-.left-\[0px\] {
-  left: 0px;
 }
 
 .left-\[35\.28\%\] {
@@ -622,24 +610,12 @@ video {
   left: 70.56%;
 }
 
-.left-\[71\.88\%\] {
-  left: 71.88%;
-}
-
 .left-\[9px\] {
   left: 9px;
 }
 
-.left-\[calc\(50\%_-_60px\)\] {
-  left: calc(50% - 60px);
-}
-
 .right-4 {
   right: 1rem;
-}
-
-.right-\[-3\.12\%\] {
-  right: -3.12%;
 }
 
 .right-\[0\.04\%\] {
@@ -666,10 +642,6 @@ video {
   top: 1rem;
 }
 
-.top-\[-3\.12\%\] {
-  top: -3.12%;
-}
-
 .top-\[-79px\] {
   top: -79px;
 }
@@ -686,16 +658,8 @@ video {
   top: 0;
 }
 
-.top-\[0px\] {
-  top: 0px;
-}
-
 .top-\[13px\] {
   top: 13px;
-}
-
-.top-\[71\.88\%\] {
-  top: 71.88%;
 }
 
 .top-\[86\.8\%\] {
@@ -704,10 +668,6 @@ video {
 
 .top-\[8px\] {
   top: 8px;
-}
-
-.top-\[calc\(50\%_-_60px\)\] {
-  top: calc(50% - 60px);
 }
 
 .z-10 {
@@ -766,10 +726,6 @@ video {
   margin-left: 1.25rem;
 }
 
-.ml-\[-324px\] {
-  margin-left: -324px;
-}
-
 .ml-\[-50px\] {
   margin-left: -50px;
 }
@@ -790,16 +746,16 @@ video {
   margin-top: -100px;
 }
 
+.mt-\[-30px\] {
+  margin-top: -30px;
+}
+
 .mt-\[0px\] {
   margin-top: 0px;
 }
 
 .mt-\[30px\] {
   margin-top: 30px;
-}
-
-.mt-\[-30px\] {
-  margin-top: -30px;
 }
 
 .box-border {
@@ -830,20 +786,12 @@ video {
   display: none;
 }
 
-.h-10 {
-  height: 2.5rem;
-}
-
 .h-16 {
   height: 4rem;
 }
 
 .h-28 {
   height: 7rem;
-}
-
-.h-3\.5 {
-  height: 0.875rem;
 }
 
 .h-32 {
@@ -864,10 +812,6 @@ video {
 
 .h-7 {
   height: 1.75rem;
-}
-
-.h-8 {
-  height: 2rem;
 }
 
 .h-\[110px\] {
@@ -920,10 +864,6 @@ video {
 
 .h-\[30\.8px\] {
   height: 30.8px;
-}
-
-.h-\[31\.25\%\] {
-  height: 31.25%;
 }
 
 .h-\[33\.3px\] {
@@ -1034,10 +974,6 @@ video {
   width: 4rem;
 }
 
-.w-3\.5 {
-  width: 0.875rem;
-}
-
 .w-4 {
   width: 1rem;
 }
@@ -1094,20 +1030,8 @@ video {
   width: 140px;
 }
 
-.w-\[1440px\] {
-  width: 1440px;
-}
-
 .w-\[16\.5px\] {
   width: 16.5px;
-}
-
-.w-\[161px\] {
-  width: 161px;
-}
-
-.w-\[165\.6px\] {
-  width: 165.6px;
 }
 
 .w-\[18px\] {
@@ -1122,14 +1046,6 @@ video {
   width: 203px;
 }
 
-.w-\[213px\] {
-  width: 213px;
-}
-
-.w-\[22\.1px\] {
-  width: 22.1px;
-}
-
 .w-\[250px\] {
   width: 250px;
 }
@@ -1138,28 +1054,12 @@ video {
   width: 258px;
 }
 
-.w-\[259px\] {
-  width: 259px;
-}
-
 .w-\[29\.4\%\] {
   width: 29.4%;
 }
 
-.w-\[296px\] {
-  width: 296px;
-}
-
 .w-\[300px\] {
   width: 300px;
-}
-
-.w-\[31\.25\%\] {
-  width: 31.25%;
-}
-
-.w-\[41px\] {
-  width: 41px;
 }
 
 .w-\[50\%\] {
@@ -1176,10 +1076,6 @@ video {
 
 .w-\[525px\] {
   width: 525px;
-}
-
-.w-\[53px\] {
-  width: 53px;
 }
 
 .w-\[588px\] {
@@ -1202,20 +1098,16 @@ video {
   width: 97.1px;
 }
 
+.w-auto {
+  width: auto;
+}
+
 .w-full {
   width: 100%;
 }
 
-.w-measurements-device-width {
-  width: 1440px;
-}
-
 .w-px {
   width: 1px;
-}
-
-.w-auto {
-  width: auto;
 }
 
 .min-w-\[101px\] {
@@ -1334,10 +1226,6 @@ video {
   min-width: 374px;
 }
 
-.min-w-\[51px\] {
-  min-width: 51px;
-}
-
 .min-w-\[62px\] {
   min-width: 62px;
 }
@@ -1352,10 +1240,6 @@ video {
 
 .min-w-\[74px\] {
   min-width: 74px;
-}
-
-.min-w-\[76px\] {
-  min-width: 76px;
 }
 
 .min-w-\[82px\] {
@@ -1386,16 +1270,12 @@ video {
   max-width: 1440px;
 }
 
-.max-w-\[182\%\] {
-  max-width: 182%;
-}
-
 .max-w-\[255px\] {
   max-width: 255px;
 }
 
-.max-w-\[390px\] {
-  max-width: 390px;
+.max-w-\[300px\] {
+  max-width: 300px;
 }
 
 .max-w-\[524px\] {
@@ -1426,16 +1306,8 @@ video {
   max-width: 960px;
 }
 
-.max-w-\[calc\(100\%_-_0px\)\] {
-  max-width: calc(100% - 0px);
-}
-
 .max-w-full {
   max-width: 100%;
-}
-
-.max-w-\[300px\] {
-  max-width: 300px;
 }
 
 .flex-1 {
@@ -1553,10 +1425,6 @@ video {
   justify-content: space-around;
 }
 
-.gap-0 {
-  gap: 0px;
-}
-
 .gap-1\.5 {
   gap: 0.375rem;
 }
@@ -1625,10 +1493,6 @@ video {
   gap: 68px;
 }
 
-.gap-\[8\.3px\] {
-  gap: 8.3px;
-}
-
 .gap-measurements-gap-16 {
   gap: 16px;
 }
@@ -1643,14 +1507,6 @@ video {
 
 .gap-measurements-gap-28 {
   gap: 28px;
-}
-
-.gap-measurements-gap-32 {
-  gap: 32px;
-}
-
-.gap-measurements-gap-32-24 {
-  gap: 32px;
 }
 
 .gap-measurements-gap-40 {
@@ -1809,10 +1665,6 @@ video {
   overflow: hidden;
 }
 
-.overflow-x-auto {
-  overflow-x: auto;
-}
-
 .overflow-y-auto {
   overflow-y: auto;
 }
@@ -1835,14 +1687,6 @@ video {
 
 .rounded-measurements-radius-lg {
   border-radius: 10px;
-}
-
-.rounded-measurements-radius-md {
-  border-radius: 8px;
-}
-
-.rounded-measurements-radius-sm {
-  border-radius: 6px;
 }
 
 .rounded-measurements-radius-xl {
@@ -1869,10 +1713,6 @@ video {
   border-radius: 999px;
 }
 
-.rounded-radius-md {
-  border-radius: 8px;
-}
-
 .rounded-xl {
   border-radius: 20px;
 }
@@ -1885,25 +1725,12 @@ video {
   border-width: 1px;
 }
 
-.border-\[2px\] {
-  border-width: 2px;
-}
-
 .border-solid {
   border-style: solid;
 }
 
-.border-dashed {
-  border-style: dashed;
-}
-
 .border-none {
   border-style: none;
-}
-
-.border-background-surface-default {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .border-border-action-normal {
@@ -1920,24 +1747,9 @@ video {
   border-color: rgb(146 79 232 / var(--tw-border-opacity));
 }
 
-.border-text-accent-purple-accent {
-  --tw-border-opacity: 1;
-  border-color: rgb(146 79 232 / var(--tw-border-opacity));
-}
-
-.bg-background-accent-green-accent {
-  --tw-bg-opacity: 1;
-  background-color: rgb(38 189 108 / var(--tw-bg-opacity));
-}
-
 .bg-background-badge-blue {
   --tw-bg-opacity: 1;
   background-color: rgb(227 234 253 / var(--tw-bg-opacity));
-}
-
-.bg-background-badge-purple {
-  --tw-bg-opacity: 1;
-  background-color: rgb(236 223 251 / var(--tw-bg-opacity));
 }
 
 .bg-background-button-tertiary {
@@ -1956,11 +1768,6 @@ video {
 .bg-background-surface-neutral {
   --tw-bg-opacity: 1;
   background-color: rgb(247 247 248 / var(--tw-bg-opacity));
-}
-
-.bg-border-base-divider {
-  --tw-bg-opacity: 1;
-  background-color: rgb(233 234 236 / var(--tw-bg-opacity));
 }
 
 .bg-elements-neutral-4 {
@@ -1988,23 +1795,9 @@ video {
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
 
-.bg-icon-base-quaternary {
-  background-color: rgba(10, 15, 41, 0.25);
-}
-
 .bg-text-accent-purple-accent {
   --tw-bg-opacity: 1;
   background-color: rgb(146 79 232 / var(--tw-bg-opacity));
-}
-
-.bg-text-base-primary {
-  --tw-bg-opacity: 1;
-  background-color: rgb(20 21 26 / var(--tw-bg-opacity));
-}
-
-.bg-text-status-destructive {
-  --tw-bg-opacity: 1;
-  background-color: rgb(230 72 61 / var(--tw-bg-opacity));
 }
 
 .bg-transparent {
@@ -2020,44 +1813,8 @@ video {
   --tw-bg-opacity: 0.75;
 }
 
-.bg-\[url\(\'\.\/public\/container1\@3x\.png\'\)\] {
-  background-image: url('./public/container1@3x.png');
-}
-
-.bg-\[url\(\'\.\/public\/container2\@3x\.png\'\)\] {
-  background-image: url('./public/container2@3x.png');
-}
-
-.bg-\[url\(\'\.\/public\/container3\@3x\.png\'\)\] {
-  background-image: url('./public/container3@3x.png');
-}
-
-.bg-\[url\(\'\.\/public\/container4\@3x\.png\'\)\] {
-  background-image: url('./public/container4@3x.png');
-}
-
-.bg-\[url\(\'\.\/public\/container5\@3x\.png\'\)\] {
-  background-image: url('./public/container5@3x.png');
-}
-
-.bg-\[url\(\'\.\/public\/container6\@3x\.png\'\)\] {
-  background-image: url('./public/container6@3x.png');
-}
-
-.bg-\[url\(\'\.\/public\/container7\@3x\.png\'\)\] {
-  background-image: url('./public/container7@3x.png');
-}
-
-.bg-\[url\(\'\.\/public\/container\@3x\.png\'\)\] {
-  background-image: url('./public/container@3x.png');
-}
-
 .bg-\[url\(\'\.\/public\/feedback-form\@3x\.png\'\)\] {
   background-image: url('./public/feedback-form@3x.png');
-}
-
-.bg-\[url\(\'\/public\/avatar6\@3x\.png\'\)\] {
-  background-image: url('/public/avatar6@3x.png');
 }
 
 .bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/\/avatar6\@3x\.png\'\)\] {
@@ -2066,6 +1823,14 @@ video {
 
 .bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/container4\@3x\.png\'\)\] {
   background-image: url('/wp-content/themes/business-setup/web/public/container4@3x.png');
+}
+
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/container5\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/container5@3x.png');
+}
+
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/container7\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/container7@3x.png');
 }
 
 .bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/hero\@3x\.png\'\)\] {
@@ -2090,14 +1855,6 @@ video {
 
 .bg-\[url\(\'\/wp-content\/themes\/vision-prime\/web\/public\/numbers-title-container\@3x\.png\'\)\] {
   background-image: url('/wp-content/themes/vision-prime/web/public/numbers-title-container@3x.png');
-}
-
-.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/container5\@3x\.png\'\)\] {
-  background-image: url('/wp-content/themes/business-setup/web/public/container5@3x.png');
-}
-
-.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/container7\@3x\.png\'\)\] {
-  background-image: url('/wp-content/themes/business-setup/web/public/container7@3x.png');
 }
 
 .bg-cover {
@@ -2125,38 +1882,17 @@ video {
   padding: 1rem;
 }
 
-.p-measurements-gap-8 {
-  padding: 8px;
-}
-
 .p-numbers-10 {
   padding: 10px;
-}
-
-.p-numbers-2 {
-  padding: 2px;
-}
-
-.p-numbers-32 {
-  padding: 32px;
 }
 
 .p-numbers-40 {
   padding: 40px;
 }
 
-.p-numbers-8 {
-  padding: 8px;
-}
-
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
-}
-
-.px-0\.5 {
-  padding-left: 0.125rem;
-  padding-right: 0.125rem;
 }
 
 .px-1 {
@@ -2239,11 +1975,6 @@ video {
   padding-right: 45px;
 }
 
-.px-\[465px\] {
-  padding-left: 465px;
-  padding-right: 465px;
-}
-
 .px-\[46px\] {
   padding-left: 46px;
   padding-right: 46px;
@@ -2262,11 +1993,6 @@ video {
 .px-\[63px\] {
   padding-left: 63px;
   padding-right: 63px;
-}
-
-.px-\[7px\] {
-  padding-left: 7px;
-  padding-right: 7px;
 }
 
 .px-\[84px\] {
@@ -2289,26 +2015,6 @@ video {
   padding-right: 12px;
 }
 
-.px-numbers-20 {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.px-numbers-3 {
-  padding-left: 3px;
-  padding-right: 3px;
-}
-
-.px-numbers-4 {
-  padding-left: 4px;
-  padding-right: 4px;
-}
-
-.px-numbers-8 {
-  padding-left: 8px;
-  padding-right: 8px;
-}
-
 .py-0 {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -2317,11 +2023,6 @@ video {
 .py-0\.5 {
   padding-top: 0.125rem;
   padding-bottom: 0.125rem;
-}
-
-.py-1\.5 {
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
 }
 
 .py-10 {
@@ -2414,19 +2115,9 @@ video {
   padding-bottom: 10px;
 }
 
-.py-numbers-16 {
-  padding-top: 16px;
-  padding-bottom: 16px;
-}
-
 .py-numbers-2 {
   padding-top: 2px;
   padding-bottom: 2px;
-}
-
-.py-numbers-3 {
-  padding-top: 3px;
-  padding-bottom: 3px;
 }
 
 .py-numbers-6 {
@@ -2503,10 +2194,6 @@ video {
   padding-left: 3px;
 }
 
-.pl-\[505px\] {
-  padding-left: 505px;
-}
-
 .pl-\[60px\] {
   padding-left: 60px;
 }
@@ -2517,10 +2204,6 @@ video {
 
 .pl-measurements-gap-40 {
   padding-left: 40px;
-}
-
-.pr-0 {
-  padding-right: 0px;
 }
 
 .pr-0\.5 {
@@ -2597,10 +2280,6 @@ video {
 
 .pt-measurements-gap-80-48 {
   padding-top: 80px;
-}
-
-.pt-numbers-12 {
-  padding-top: 12px;
 }
 
 .text-left {
@@ -2683,10 +2362,6 @@ video {
   font-size: 20px;
 }
 
-.text-xs {
-  font-size: 12px;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -2699,20 +2374,8 @@ video {
   font-weight: 400;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .uppercase {
   text-transform: uppercase;
-}
-
-.leading-\[13\.2px\] {
-  line-height: 13.2px;
-}
-
-.leading-\[16px\] {
-  line-height: 16px;
 }
 
 .leading-\[18px\] {
@@ -2763,10 +2426,6 @@ video {
   line-height: 78px;
 }
 
-.leading-\[normal\] {
-  line-height: normal;
-}
-
 .tracking-\[-0\.03em\] {
   letter-spacing: -0.03em;
 }
@@ -2811,10 +2470,6 @@ video {
   letter-spacing: 0.4em;
 }
 
-.tracking-\[normal\] {
-  letter-spacing: normal;
-}
-
 .text-\[inherit\] {
   color: inherit;
 }
@@ -2827,11 +2482,6 @@ video {
 .text-base-primary {
   --tw-text-opacity: 1;
   color: rgb(20 21 26 / var(--tw-text-opacity));
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-general-1-primary {
@@ -2889,11 +2539,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-general-9-secondary-variant {
-  --tw-text-opacity: 1;
-  color: rgb(104 104 104 / var(--tw-text-opacity));
 }
 
 .mix-blend-darken {
@@ -3875,6 +3520,11 @@ nav .parent > ul.sub-menu:before {
   color: rgb(83 20 163/var(--tw-text-opacity));
 }
 
+.stm-open .accordion-header {
+  --tw-text-opacity: 1;
+  color: rgb(83 20 163/var(--tw-text-opacity));
+}
+
 .navigation .navigation-menu .mobile-switcher {
   display: none !important;
   padding: 12px 10px;
@@ -4830,14 +4480,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     box-sizing: border-box;
   }
 
-  .mq1250\:flex-wrap {
-    flex-wrap: wrap;
-  }
-
-  .mq1250\:gap-numbers-64 {
-    gap: 64px;
-  }
-
   .mq1250\:pb-measurements-gap-40 {
     padding-bottom: 40px;
   }
@@ -4846,16 +4488,8 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     padding-left: 102px;
   }
 
-  .mq1250\:pl-\[232px\] {
-    padding-left: 232px;
-  }
-
   .mq1250\:pr-\[102px\] {
     padding-right: 102px;
-  }
-
-  .mq1250\:pr-\[232px\] {
-    padding-right: 232px;
   }
 
   .mq1250\:pt-measurements-gap-40 {
@@ -4967,20 +4601,12 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     max-width: 100%;
   }
 
-  .mq1125\:pb-measurements-gap-80-48 {
-    padding-bottom: 80px;
-  }
-
   .mq1125\:pl-\[42px\] {
     padding-left: 42px;
   }
 
   .mq1125\:pr-\[42px\] {
     padding-right: 42px;
-  }
-
-  .mq1125\:pt-measurements-gap-80-48 {
-    padding-top: 80px;
   }
 }
 
@@ -4997,10 +4623,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     flex-wrap: wrap;
   }
 
-  .mq1050\:pb-\[35px\] {
-    padding-bottom: 35px;
-  }
-
   .mq1050\:pb-measurements-gap-120 {
     padding-bottom: 120px;
   }
@@ -5009,20 +4631,12 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     padding-bottom: 80px;
   }
 
-  .mq1050\:pl-\[252px\] {
-    padding-left: 252px;
-  }
-
   .mq1050\:pl-\[42px\] {
     padding-left: 42px;
   }
 
   .mq1050\:pr-\[42px\] {
     padding-right: 42px;
-  }
-
-  .mq1050\:pt-\[35px\] {
-    padding-top: 35px;
   }
 
   .mq1050\:pt-measurements-gap-120 {
@@ -5187,10 +4801,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     gap: 25px;
   }
 
-  .mq800\:gap-measurements-gap-32 {
-    gap: 32px;
-  }
-
   .mq800\:gap-measurements-gap-40 {
     gap: 40px;
   }
@@ -5315,10 +4925,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     gap: 25px;
   }
 
-  .mq750\:gap-measurements-gap-32-24 {
-    gap: 32px;
-  }
-
   .mq750\:gap-measurements-gap-40 {
     gap: 40px;
   }
@@ -5368,14 +4974,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     padding-left: 2.5rem;
   }
 
-  .mq750\:pl-\[116px\] {
-    padding-left: 116px;
-  }
-
-  .mq750\:pl-\[126px\] {
-    padding-left: 126px;
-  }
-
   .mq750\:pl-\[137px\] {
     padding-left: 137px;
   }
@@ -5392,20 +4990,12 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     padding-left: 51px;
   }
 
-  .mq750\:pl-measurements-gap-120-24 {
-    padding-left: 120px;
-  }
-
   .mq750\:pl-measurements-gap-80-48 {
     padding-left: 80px;
   }
 
   .mq750\:pr-10 {
     padding-right: 2.5rem;
-  }
-
-  .mq750\:pr-\[116px\] {
-    padding-right: 116px;
   }
 
   .mq750\:pr-\[137px\] {
@@ -5422,10 +5012,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
 
   .mq750\:pr-\[51px\] {
     padding-right: 51px;
-  }
-
-  .mq750\:pr-measurements-gap-120-24 {
-    padding-right: 120px;
   }
 
   .mq750\:pr-measurements-gap-80-48 {
@@ -5460,14 +5046,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     font-size: 48px;
   }
 
-  .mq750\:text-5xl {
-    font-size: 24px;
-  }
-
-  .mq750\:leading-\[29px\] {
-    line-height: 29px;
-  }
-
   .mq750\:leading-\[34px\] {
     line-height: 34px;
   }
@@ -5482,10 +5060,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
 }
 
 @media screen and (max-width: 650px) {
-  .mq650\:mt-\[-5px\] {
-    margin-top: -5px;
-  }
-
   .mq650\:mt-\[-60px\] {
     margin-top: -60px;
   }
@@ -5520,20 +5094,8 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     height: 250px;
   }
 
-  .mq450\:h-auto {
-    height: auto;
-  }
-
   .mq450\:min-w-full {
     min-width: 100%;
-  }
-
-  .mq450\:min-w-\[100px\] {
-    min-width: 100px;
-  }
-
-  .mq450\:max-w-full {
-    max-width: 100%;
   }
 
   .mq450\:grid-cols-2 {
@@ -5576,10 +5138,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     padding-bottom: 1.25rem;
   }
 
-  .mq450\:pb-\[23px\] {
-    padding-bottom: 23px;
-  }
-
   .mq450\:pb-\[25px\] {
     padding-bottom: 25px;
   }
@@ -5616,10 +5174,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     padding-left: 1.25rem;
   }
 
-  .mq450\:pl-measurements-gap-120-24 {
-    padding-left: 120px;
-  }
-
   .mq450\:pl-measurements-gap-40 {
     padding-left: 40px;
   }
@@ -5636,10 +5190,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     padding-right: 1.25rem;
   }
 
-  .mq450\:pr-measurements-gap-120-24 {
-    padding-right: 120px;
-  }
-
   .mq450\:pr-measurements-gap-40 {
     padding-right: 40px;
   }
@@ -5654,10 +5204,6 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
 
   .mq450\:pt-5 {
     padding-top: 1.25rem;
-  }
-
-  .mq450\:pt-\[23px\] {
-    padding-top: 23px;
   }
 
   .mq450\:pt-\[25px\] {
