--- a/web/global.css
+++ b/web/global.css
@@ -69,6 +69,10 @@ body.home .stm-dropdown {
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-ring-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-shadow);
 }
+body.home .navigation .navigation-menu .starter-menu > li > .sub-menu {
+  background-color: rgba(59, 25, 103, 0.831372549);
+  color: white;
+}
 body.home .navigation .navigation-menu .mobile-switcher span {
   background-color: #fff;
 }
@@ -800,10 +804,6 @@ nav .parent > ul.sub-menu:before {
   color: rgb(83 20 163/var(--tw-text-opacity));
 }
 
-.stm-open .accordion-header {
-    --tw-text-opacity: 1;
-  color: rgb(83 20 163/var(--tw-text-opacity));
-}
 .navigation .navigation-menu .mobile-switcher {
   display: none !important;
   padding: 12px 10px;
