--- a/web/global.scss
+++ b/web/global.scss
@@ -19,13 +19,13 @@ body {
 body {
   .stm-menu-colors, .stm-dropdown {
 	color: rgba(15, 19, 36, 0.6);
-    --tw-bg-opacity: 1;
-    background-color: rgb(247 247 248 / var(--tw-bg-opacity));
+	--tw-bg-opacity: 1;
+	background-color: rgb(247 247 248 / var(--tw-bg-opacity));
   }
 
   .stm-dropdown {
 	color: rgba(15, 19, 36, 0.6);
-	background:   rgb(247 247 248 / var(--tw-bg-opacity)) !important;
+	background: rgb(247 247 248 / var(--tw-bg-opacity)) !important;
 	border: 1px solid rgba(15, 19, 36, 0.6);
   }
 
@@ -43,27 +43,27 @@ body {
   }
 
   .navigation .navigation-menu .mobile-switcher span {
-  display: block;
-  width: 28px;
-  height: 4px;
-  background-color: rgba(15, 19, 36, 0.6);
-  margin-bottom: 5px;
-  border-radius: 2px
-}
+	display: block;
+	width: 28px;
+	height: 4px;
+	background-color: rgba(15, 19, 36, 0.6);
+	margin-bottom: 5px;
+	border-radius: 2px
+  }
 
   .navigation .navigation-menu.active .menu li:hover {
-	color:  #fff;
-	background-color:  #3b1967d4;
+	color: #fff;
+	background-color: #3b1967d4;
   }
 
   .navigation .navigation-menu .starter-menu > li > .sub-menu {
 
-    background-color:rgba(15, 19, 36, 0.6);
+	background-color: rgba(15, 19, 36, 0.6);
+
+
+  }
 
 }
-
-}
-
 
 
 body.home {
@@ -90,15 +90,22 @@ body.home {
 
   }
 
+  .navigation .navigation-menu .starter-menu > li > .sub-menu {
+	background-color: rgba(59, 25, 103, 0.831372549);
+	color: white;
+  }
+
   .navigation .navigation-menu .mobile-switcher span {
 
 	background-color: #fff;
 
   }
- .stm-menu-colors, .stm-dropdown {
 
-    background-color: transparent;
+  .stm-menu-colors, .stm-dropdown {
+
+	background-color: transparent;
   }
+
   .navigation .navigation-menu.active .menu {
 
 	background-color: #3b1967d4;
